--- a/w07/d04/solution/youtube-react/package.json
+++ b/w07/d04/solution/youtube-react/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "dotenv": "^2.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
