--- a/w08/d01/afternoon/instructor/meme-machine/package.json
+++ b/w08/d01/afternoon/instructor/meme-machine/package.json
@@ -6,9 +6,11 @@
     "react-scripts": "0.8.4"
   },
   "dependencies": {
+    "dotenv": "^4.0.0",
     "firebase": "^3.6.4",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
